--- a/.gitignore
+++ b/.gitignore
@@ -186,6 +186,8 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# Custom folder 
+Books_And_Exams
 
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
